--- a/fluxd_rust/crates/chainstate/Cargo.toml
+++ b/fluxd_rust/crates/chainstate/Cargo.toml
@@ -21,3 +21,6 @@ rayon = "1.10"
 sapling-crypto = "0.5"
 sha2 = { version = "0.10", features = ["compress"] }
 zcash_primitives = { version = "0.26", default-features = false, features = ["std"] }
+
+[dev-dependencies]
+tempfile = "3"
