Complete P0 parity: fluxnode checks + block/undo metadata
- Validate fluxnode START/CONFIRM signed messages and collateral ownership\n- Persist undo to flatfiles and store block+undo offsets in block index\n- Track per-file flatfile metadata in the DB\n- Embed C++ sighash vectors and add parity test (no fluxd/ dependency)\n- Update ROADMAP

--- a/fluxd_rust/crates/script/Cargo.toml
+++ b/fluxd_rust/crates/script/Cargo.toml
@@ -9,6 +9,9 @@ publish = false
 fluxd-consensus = { path = "../consensus" }
 fluxd-primitives = { path = "../primitives" }
 blake2b_simd = "1"
-secp256k1 = "0.29"
+secp256k1 = { version = "0.29", features = ["recovery"] }
 ripemd = "0.1"
 sha1 = "0.10"
+
+[dev-dependencies]
+serde_json = "1"
