--- a/fluxd_rust/crates/chainstate/Cargo.toml
+++ b/fluxd_rust/crates/chainstate/Cargo.toml
@@ -24,3 +24,4 @@ zcash_primitives = { version = "0.26", default-features = false, features = ["st
 
 [dev-dependencies]
 tempfile = "3"
+secp256k1 = { version = "0.29", features = ["recovery"] }
