ops: log levels and structured logging

--- a/fluxd_rust/Cargo.toml
+++ b/fluxd_rust/Cargo.toml
@@ -3,6 +3,7 @@ members = [
   "crates/chainstate",
   "crates/consensus",
   "crates/fluxnode",
+  "crates/log",
   "crates/node",
   "crates/pon",
   "crates/pow",
