--- a/fluxd_rust/crates/storage/Cargo.toml
+++ b/fluxd_rust/crates/storage/Cargo.toml
@@ -7,6 +7,7 @@ publish = false
 
 [dependencies]
 fjall = { version = "2.11.2", optional = true }
+fluxd-log = { path = "../log" }
 smallvec = { version = "1.13", features = ["const_generics"] }
 
 [features]
