--- a/fluxd_rust/crates/node/Cargo.toml
+++ b/fluxd_rust/crates/node/Cargo.toml
@@ -19,6 +19,7 @@ rand = "0.8"
 tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
 crossbeam-channel = "0.5"
 base64 = "0.22"
+bech32 = "0.11"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 primitive-types = "0.14"
