--- a/fluxd_rust/crates/shielded/Cargo.toml
+++ b/fluxd_rust/crates/shielded/Cargo.toml
@@ -18,10 +18,11 @@ minreq = { version = "2.14.1", default-features = false, features = ["https"] }
 redjubjub = "0.8"
 sapling-crypto = "0.5"
 group = "0.13"
-sha2 = "0.10"
+sha2 = { version = "0.10", features = ["compress"] }
 zcash_proofs = { version = "0.26", default-features = false, features = ["multicore"] }
 
 [dev-dependencies]
+core2 = "0.4"
 incrementalmerkletree = { version = "0.8.2", features = ["legacy-api"] }
 rand_chacha = "0.3"
 rand_core = "0.6"
