Handle SIGTERM for clean shutdown
Add SIGINT/SIGTERM handlers that trigger the existing shutdown watch channel.\n\nDocs: recommend RPC stop or SIGTERM (pkill) for clean resync/ops.\n\nVPS: sent SIGTERM to running perf instance; observed "Signal received; requesting shutdown" and clean exit.

--- a/fluxd_rust/crates/node/Cargo.toml
+++ b/fluxd_rust/crates/node/Cargo.toml
@@ -16,7 +16,7 @@ fluxd-script = { path = "../script" }
 fluxd-shielded = { path = "../shielded" }
 fluxd-storage = { path = "../storage", features = ["fjall"] }
 rand = "0.8"
-tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
+tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
 crossbeam-channel = "0.5"
 base64 = "0.22"
 bech32 = "0.11"
