--- a/fluxd_rust/crates/node/Cargo.toml
+++ b/fluxd_rust/crates/node/Cargo.toml
@@ -26,6 +26,7 @@ primitive-types = "0.14"
 secp256k1 = "0.29"
 fs2 = "0.4"
 sapling-crypto = "0.5"
+jubjub = "0.10"
 zip32 = "0.2"
 zcash_note_encryption = "0.4"
 zcash_primitives = { version = "0.26", default-features = false, features = ["std", "circuits", "non-standard-fees"] }
