--- a/fluxd_rust/crates/node/Cargo.toml
+++ b/fluxd_rust/crates/node/Cargo.toml
@@ -16,6 +16,9 @@ fluxd-script = { path = "../script" }
 fluxd-shielded = { path = "../shielded" }
 fluxd-storage = { path = "../storage", features = ["fjall"] }
 rand = "0.8"
+argon2 = "0.5"
+chacha20poly1305 = "0.10"
+zeroize = "1"
 tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
 crossbeam-channel = "0.5"
 base64 = "0.22"
