--- a/fluxd_rust/crates/shielded/Cargo.toml
+++ b/fluxd_rust/crates/shielded/Cargo.toml
@@ -12,13 +12,16 @@ fluxd-script = { path = "../script" }
 blake2b_simd = "1"
 bellman = { version = "0.14", default-features = false, features = ["groth16"] }
 bls12_381 = "0.8"
+chacha20poly1305 = "0.10"
 ed25519-dalek = { version = "2", features = ["std"] }
 jubjub = "0.10"
 minreq = { version = "2.14.1", default-features = false, features = ["https"] }
+rand_core = "0.6"
 redjubjub = "0.8"
 sapling-crypto = "0.5"
 group = "0.13"
 sha2 = { version = "0.10", features = ["compress"] }
+x25519-dalek = { version = "2", features = ["static_secrets"] }
 zcash_proofs = { version = "0.26", default-features = false, features = ["multicore"] }
 
 [dev-dependencies]
