--- a/fluxd_rust/crates/node/Cargo.toml
+++ b/fluxd_rust/crates/node/Cargo.toml
@@ -23,6 +23,8 @@ tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-threa
 crossbeam-channel = "0.5"
 base64 = "0.22"
 bech32 = "0.11"
+crossterm = "0.29"
+ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 primitive-types = "0.14"
