--- a/fluxd_rust/crates/node/Cargo.toml
+++ b/fluxd_rust/crates/node/Cargo.toml
@@ -25,6 +25,7 @@ base64 = "0.22"
 bech32 = "0.11"
 crossterm = "0.29"
 ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
+qrcode = "0.14"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 primitive-types = "0.14"
